[gd_scene load_steps=7 format=3 uid="uid://dqj6624ni3cyj"]

[ext_resource type="Script" path="res://ui/start_menu/start_menu.gd" id="1_6640u"]
[ext_resource type="Texture2D" uid="uid://cp1v6xp3m2s73" path="res://ui/start_menu/background.png" id="2_3kbjn"]
[ext_resource type="PackedScene" uid="uid://bipo5gfiuf2jl" path="res://components/language_switcher/language_switcher.tscn" id="2_o24pm"]
[ext_resource type="Theme" uid="uid://cb6ct0icqeuwi" path="res://theme/theme.tres" id="2_vdu52"]
[ext_resource type="PackedScene" uid="uid://clx44ncalqpaq" path="res://components/mute_button/mute_button.tscn" id="3_8jmae"]
[ext_resource type="PackedScene" uid="uid://kqmg0yvqgtuh" path="res://components/fade/fade.tscn" id="5_4vpla"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6640u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.862745, 0.694118, 0.639216, 1)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.486275)
texture_filter = 4
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_3kbjn")

[node name="LanguageSwitcher" parent="." instance=ExtResource("2_o24pm")]
layout_mode = 1

[node name="MuteButton" parent="." instance=ExtResource("3_8jmae")]
layout_mode = 1

[node name="TitleSubtitleContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_top = 40.0
offset_right = 640.0
offset_bottom = 103.0

[node name="Title" type="Label" parent="TitleSubtitleContainer"]
layout_mode = 2
theme = ExtResource("2_vdu52")
theme_override_colors/font_color = Color(0.74, 0.28305, 0.259, 1)
theme_override_colors/font_outline_color = Color(0.33, 0.1155, 0.1298, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 25
theme_override_font_sizes/font_size = 32
text = "GameTitle"
horizontal_alignment = 1

[node name="Subtitle" type="Label" parent="TitleSubtitleContainer"]
layout_mode = 2
theme = ExtResource("2_vdu52")
theme_override_colors/font_color = Color(0.68, 0.3264, 0.349973, 1)
theme_override_font_sizes/font_size = 14
text = "GameSubtitle"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 272.0
offset_top = 140.0
offset_right = 370.0
offset_bottom = 311.0

[node name="PlayButton" type="Button" parent="VBoxContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("2_vdu52")
text = "PlayButton"

[node name="ResumeButton" type="Button" parent="VBoxContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("2_vdu52")
text = "ResumeButton"

[node name="LogOutButton" type="Button" parent="VBoxContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("2_vdu52")
text = "LogOutButton"

[node name="CreditsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_vdu52")
text = "CreditsButton"

[node name="ExitButton" type="Button" parent="VBoxContainer" groups=["Buttons"]]
layout_mode = 2
theme = ExtResource("2_vdu52")
text = "ExitButton"

[node name="Fade" parent="." instance=ExtResource("5_4vpla")]
visible = false
layout_mode = 1

[connection signal="pressed" from="VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LogOutButton" to="." method="_on_log_out_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
